--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.sourceforge.czt</groupId>
   <artifactId>maven-cup-plugin</artifactId>
-  <version>1.6.4</version>
+  <version>1.6.5-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>CZT Cup Maven Plugin</name>
 
